repair contact card center on mobile and fontawesome icons display problem

--- a/components/CardWithIcon.module.scss
+++ b/components/CardWithIcon.module.scss
@@ -1,4 +1,5 @@
 .card {
+    padding: 1rem;
     display: flex;
     flex-direction: column;
     align-items: stretch;
@@ -9,7 +10,6 @@
 }
 
 .innerCard {
-    margin: 1rem;
     border: rgba(0, 124, 6, 0.2) 1px solid;
     border-radius: 5px;
     padding: 1.5rem 2rem;
@@ -30,10 +30,4 @@
     font-size: 4rem;
     color: #00ad09;
     transition: all .5s;
-}
-
-@media only screen and (max-width: 992px) {
-    .card {
-        // margin-bottom: 3rem;
-    }
 }
