--- a/components/CardWithPic.module.scss
+++ b/components/CardWithPic.module.scss
@@ -8,6 +8,7 @@
 .innerCard {
     padding: 1rem;
     background-color: rgb(241, 241, 241);
+    border: rgba(0, 124, 6, 0.2) 1px solid;
     height: 100%;
     transition: all .5s;
 }
@@ -24,6 +25,7 @@
 
 .pic {
     position: relative !important;
+    border-radius: 5px;
     // overflow: hidden;
 }
 
